--- a/cat-survey-form.html
+++ b/cat-survey-form.html
@@ -8,24 +8,109 @@
 </head>
 <body>
     <h1 id="title">Cats Survey</h1>
-    <p id="description">Let us know how we can improve our services for your cats!</p>
+    <p id="description">By answering this survey, you will help the world get to know cats better.</p>
     <form id="survey-form">
-        <label for="name" id="name-label">Name</label>
+      <div class="form-group">
+        <label for="name" id="name-label">Name:</label>
         <input type="text" id="name" name="name" placeholder="Enter your name" required>
-        <label for="email" id="email-label">Email</label>
+      </div>
+      <div class="form-group">
+        <label for="email" id="email-label">Email:</label>
         <input type="email" id="email" name="email" placeholder="Enter your email" required>
-        <label for="number" id="number-label">Age</label>
-        <input type="number" id="number" name="age" min="1" max="100" placeholder="Age" required>
-        <label for="dropdown" id="dropdown-label">How often do you feed your cat?</label>
-        <select id="dropdown" name="feed">
-            <option value="daily">Daily</option>
-            <option value="weekly">Weekly</option>
-            <option value="monthly">Monthly</option>
-            <option value="yearly">Yearly</option>
+      </div>
+      <div class="form-group">
+        <label for="number" id="number-label">Age:</label>
+        <input type="number" id="number" name="age" min="7" max="100" placeholder="Age" required>
+      </div>
+
+      <div class="form-group">
+        <label for="dropdown" id="dropdown-label">How many cats do you own?</label>
+        <select id="dropdown" name="">
+          <option value="onetofive">1 - 5</option>
+          <option value="sixtoten">6 - 10</option>
+          <option value="elevenplus">11+</option>
         </select>
-        <label for="comments" id="comments-label">Any comments or suggestions?</label>
-        <textarea id="comments" name="comments" placeholder="Enter your comments here"></textarea>
-        <button type="submit" id="submit">Submit</button>
+      </div>
+      
+      <div class="form-group">
+        <label for="cat-care-rating">Rate the following aspects of cat care:</label>
+        <div class="row">
+          <div>""</div>
+          <div>Poor</div>
+          <div>Average</div>
+          <div>Excellent</div>
+        </div>
+
+        <div class="row">
+          <div>Feeding</div>
+          <div class="radio-group">
+            <label for="feeding-poor">
+              <input type="radio" id="feeding-poor" name="feeding" value="feeding-poor" checked>
+            </label>
+          </div>
+          <div>
+            <div class="radio-group">
+            <label for="feeding-average">
+              <input type="radio" id="feeding-average" name="feeding" vlaue="feeding-average">
+            </label>
+          </div>
+          </div>
+          <div>
+            <div class="radio-group">
+            <label for="feeding-excellent">
+              <input type="radio" id="feeding-excellent" name="feeding" value="feeding-excellent">
+            </label>
+          </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div>Grooming</div>
+          <div class="radio-group">
+            <label for="grooming-poor">
+              <input type="radio" id="grooming-poor" name="grooming" value="grooming-poor" checked>
+            </label>
+          </div>
+          <div>
+            <div class="radio-group">
+            <label for="grooming-average">
+              <input type="radio" id="grooming-average" name="grooming" value="grooming-average">
+            </label>
+          </div>
+          </div>
+          <div>
+            <div class="radio-group">
+            <label for="grooming-excellent">
+              <input type="radio" id="grooming-excellent" name="grooming" value="grooming-excellent">
+            </label>
+          </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div>Health Check-ups</div>
+          <div class="radio-group">
+            <label for="checkups-poor">
+              <input type="radio" id="checkups-poor" name="checkups" value="checkups-poor" checked>
+            </label>
+          </div>
+          <div>
+            <div class="radio-group">
+            <label for="checkups-average">
+              <input type="radio" id="checkups-average" name="checkups" value="checkups-average">
+            </label>
+          </div>
+          </div>
+          <div>
+            <div class="radio-group">
+            <label for="checkups-excellent">
+              <input type="radio" id="checkups-excellent" name="checkups" value="checkups-excellent">
+            </label>
+          </div>
+          </div>
+        </div>
+
+      </div>
     </form>
 </body>
 </html>
