--- a/tribute-page/tribute-page.html
+++ b/tribute-page/tribute-page.html
@@ -9,7 +9,8 @@
 <body>
   <!--The header will contain logo and navigation bar-->
   <header>
-    <img src="" alt="" srcset="">
+    <!--<img src="" alt="" srcset="">-->
+    <h3 id="logo">{ a. }</h3>
     <nav>
       <ul>
         <li><a href="#biography">Biography</a></li>
@@ -59,7 +60,7 @@
   </main>
   <!--The footer will contain the copyright information--> 
   <footer>
-    <h1>{ a. }</h1>
+    <h4>{ a. }</h4>
   </footer>
 </body>
 </html>
