docs: modify and update html content; realization: (while:beginner) it's best to take each section and styling one-at-a-time!

--- a/tribute-page/tribute-page.html
+++ b/tribute-page/tribute-page.html
@@ -3,64 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tibute Page</title>
+    <title>WOTU</title>
     <link rel="stylesheet" href="tpstyles.css">
 </head>
 <body>
-  <!--The header will contain logo and navigation bar-->
   <header>
-    <!--<img src="" alt="" srcset="">-->
     <h3 id="logo">{ a. }</h3>
     <nav>
       <ul>
-        <li><a href="#biography">Biography</a></li>
-        <li><a href="#achievements">Achievements</a></li>
-        <li><a href="#legacy">Legacy</a></li>
+        <li><a href="#">Biography</a></li>
+        <li><a href="#">Characteristics</a></li>
+        <li><a href="#">Legacy</a></li>
       </ul>
     </nav>
   </header>
-  <!-- SUBJECT: Marcus Aurelius | Senica | X -->
-  <!--The main content of the page will be divided into 3 sections-->
-  <main id="main-box">
-    <!--This section will contain the biography of the subject-->
+  <!--The main will contain 3 sections-->
+  <main id="main">
+    <h2 id="title">Women of the Universe</h2><!--Biography Section-->
     <section id="biography">
-      <h1 id="title">[This is the subject of the page]</h1>
-      <p id="description">[Maybe put subject's tagline or smth]</p>
-      <div id="img-div">
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRTeKDYWM13QvRu7VBv3FwEaIrXhB8jn1pGdw&s" alt="" id="image">
-        <p id="img-caption">[this will describe the image shown]</p>
-      </div>
       <div id="tribute-info">
-        [This will be the full description of the subject]
+        <div id="img-caption">[This part will be a description about Women of the Universe]</div>
+        <a href="" target="_blank" id="tribute-link">Learn More</a>
       </div>
-      <!--This will be a button anchor tag; CTA-->
-      <div class="button">
-        <a href="http://" target="_blank" rel="noopener noreferrer" id="tribute-link">Learn more</a>
-      </div>
+      <figure id="img-div">
+        <img id="image" src="https://t4.ftcdn.net/jpg/06/17/94/55/360_F_617945541_7WDyisk9pCymeiBONjGWGmlXrPK0ar0i.jpg" alt="art where 4 women are in one picture">
+      </figure>
     </section>
-
-    <!--This section will contain the achievements of the subject-->
-    <section id="achievements">
-      <h2>Achievements</h2>
-      <ul>
-        <li>[Achievement 1]</li>
-        <li>[Achievement 2]</li>
-        <li>[Achievement 3]</li>
-        <li>[Achievement 4]</li>
-        <li>[Achievement 5]</li>
-      </ul>
-    </section>
-
-    <!--This section will contain the legacy of the subject-->
-    <section id="legacy">
-      <h2>Legacy</h2>
-      <p>[This will be the legacy of the subject]</p>
-    </section>
-
   </main>
-  <!--The footer will contain the copyright information--> 
+  <!--Footer-->
   <footer>
-    <h4>{ a. }</h4>
   </footer>
 </body>
 </html>
