--- a/tribute-page/tribute-page.html
+++ b/tribute-page/tribute-page.html
@@ -21,7 +21,7 @@
   <main id="main">
     <h2 id="title">Women of the Universe</h2><!--Biography Section-->
     <section id="biography">
-      <div id="tribute-info">
+      <div id="tribute-info" class="overlay-text">
         <div id="img-caption">[This part will be a description about Women of the Universe]</div>
         <a href="" target="_blank" id="tribute-link">Learn More</a>
       </div>
@@ -29,9 +29,13 @@
         <img id="image" src="https://t4.ftcdn.net/jpg/06/17/94/55/360_F_617945541_7WDyisk9pCymeiBONjGWGmlXrPK0ar0i.jpg" alt="art where 4 women are in one picture">
       </figure>
     </section>
+    <section id="">
+      <h2>Who are we?</h2>
+    </section>
   </main>
   <!--Footer-->
   <footer>
+    <h4>{ a. }</h4>
   </footer>
 </body>
 </html>
