docs: modified personage section + initial update on legacy section

--- a/tribute-page/tribute-page.html
+++ b/tribute-page/tribute-page.html
@@ -29,8 +29,59 @@
         <img id="image" src="https://t4.ftcdn.net/jpg/06/17/94/55/360_F_617945541_7WDyisk9pCymeiBONjGWGmlXrPK0ar0i.jpg" alt="art where 4 women are in one picture">
       </figure>
     </section>
-    <section id="">
-      <h2>Who are we?</h2>
+    <section id="personage">
+      <h2>Nine Influencial Women  in Music</h2>
+      <div id="gallery">
+        <div class="card-box">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/2/2e/Gabriela_Silang_1974_stamp_of_the_Philippines.jpg">
+          <div class="card-title"><a href="#">[link name]</a></div>
+        </div>
+        <div class="card-box">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/2/2e/Gabriela_Silang_1974_stamp_of_the_Philippines.jpg">
+          <div class="card-title"><a href="#">[link name]</a></div>
+        </div>
+        <div class="card-box">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/2/2e/Gabriela_Silang_1974_stamp_of_the_Philippines.jpg">
+          <div class="card-title"><a href="#">[link name]</a></div>
+        </div>
+        <div class="card-box">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/2/2e/Gabriela_Silang_1974_stamp_of_the_Philippines.jpg">
+          <div class="card-title">
+            <a href="#">Gabriela Silang</a>
+          </div>
+        </div>
+        <div class="card-box">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/2/2e/Gabriela_Silang_1974_stamp_of_the_Philippines.jpg">
+          <div class="card-title"><a href="#">[link name]</a></div>
+        </div>
+        <div class="card-box">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/2/2e/Gabriela_Silang_1974_stamp_of_the_Philippines.jpg">
+          <div class="card-title"><a href="#">[link name]</a></div>
+        </div>
+        <div class="card-box">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/2/2e/Gabriela_Silang_1974_stamp_of_the_Philippines.jpg">
+          <div class="card-title"><a href="#">[link name]</a></div>
+        </div>
+        <div class="card-box">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/2/2e/Gabriela_Silang_1974_stamp_of_the_Philippines.jpg">
+          <div class="card-title"><a href="#">[link name]</a></div>
+        </div>
+        <div class="card-box">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/2/2e/Gabriela_Silang_1974_stamp_of_the_Philippines.jpg">
+          <div class="card-title"><a href="#">[link name]</a></div>
+        </div>
+      </div>
+    </section>
+    <section id="legacy">
+      <h2>Women's Global Legacy</h2>
+      <div id="legacy-description">
+        <ul>
+          <li>
+            <h3>Advocacy and Activism</h3>
+            <span>Women have played crucial role in advocating for social change and injustice, and pushing for policy reforms that benefit all.</span>
+          </li>
+        </ul>
+      </div>
     </section>
   </main>
   <!--Footer-->
