styles+docs: modified stylesheet and html file.

--- a/tribute-page/tribute-page.html
+++ b/tribute-page/tribute-page.html
@@ -12,7 +12,7 @@
     <nav>
       <ul>
         <li><a href="#about">About</a></li>
-        <li><a href="#personage">Personage</a></li>
+        <li><a href="#trailblazers">Trailblazers</a></li>
         <li><a href="#legacy">Legacy</a></li>
       </ul>
     </nav>
@@ -30,7 +30,7 @@
         <figcaption id="img-caption"><i>Image Credits to the Owner</i></figcaption>
       </figure>
     </section>
-    <section id="personage">
+    <section id="trailblazers">
       <h2>Filipina Trailblazers Througout History</h2>
       <div id="gallery">
         <div class="card-box">
